tests/rosetta/out/Pascal/csv-to-html-translation-5.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/csv-to-html-translation-5.pas
csv-to-html-translation-5.pas(23,9) Error: Identifier not found "_sliceString"
csv-to-html-translation-5.pas(25,25) Error: Identifier not found "_appendList"
csv-to-html-translation-5.pas(25,49) Fatal: Syntax error, ")" expected but "," found
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
